WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96645
[BlackBerry] ASSERT failure in InRegionScrollableArea::InRegionScrollableArea
https://bugs.webkit.org/show_bug.cgi?id=96645
Summary
[BlackBerry] ASSERT failure in InRegionScrollableArea::InRegionScrollableArea
Antonio Gomes
Reported
2012-09-13 07:18:34 PDT
Start up browser, go to app menu and tap on any setting. Program terminated with signal 11, Segmentation fault. #0 0x79b8a6f4 in BlackBerry::WebKit::InRegionScrollableArea::InRegionScrollableArea (this=0x762eedb8, webPage=0x796db010, layer=0x76449110) at /home/jacky/dev/webkit/Source/WebKit/blackberry/WebKitSupport/InRegionScrollableArea.cpp:85 85 ASSERT(box->canBeScrolledAndHasScrollableArea()); (gdb) bt #0 0x79b8a6f4 in BlackBerry::WebKit::InRegionScrollableArea::InRegionScrollableArea (this=0x762eedb8, webPage=0x796db010, layer=0x76449110) at /home/jacky/dev/webkit/Source/WebKit/blackberry/WebKitSupport/InRegionScrollableArea.cpp:85 #1 0x79af74a0 in BlackBerry::WebKit::InRegionScrollerPrivate::calculateInRegionScrollableAreasForPoint (this=0x798ae750, point=...) at /home/jacky/dev/webkit/Source/WebKit/blackberry/Api/InRegionScroller.cpp:220 #2 0x79b0e2d4 in BlackBerry::WebKit::WebPagePrivate::setScrollOriginPoint (this=0x796db010, point=...) at /home/jacky/dev/webkit/Source/WebKit/blackberry/Api/WebPage.cpp:4186 #3 0x79b0e384 in BlackBerry::WebKit::WebPage::setScrollOriginPoint (this=0x796e86f8, point=...) at /home/jacky/dev/webkit/Source/WebKit/blackberry/Api/WebPage.cpp:4194 #4 0x780a5fcc in TouchHandlerWebKitThread::onTouchEvent (this=0x798b22a8, event=..., permissions=...) at /home/jacky/dev/libwebview/TouchHandlerWebKitThread.cpp:108 #5 0x780c1162 in BlackBerry::Platform::MethodDelegate2<void (TouchHandlerWebKitThread::*)(BlackBerry::Platform::TouchEvent const&, TouchPermissions const&), TouchHandlerWebKitThread, BlackBerry::Platform::TouchEvent, TouchPermissions>::execute (this=0x75e4e488) at
Attachments
follow up
(1.54 KB, patch)
2012-09-13 10:14 PDT
,
Antonio Gomes
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
follow up
(1.45 KB, patch)
2012-09-13 10:47 PDT
,
Antonio Gomes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antonio Gomes
Comment 1
2012-09-13 07:30:02 PDT
http://trac.webkit.org/changeset/128456
Antonio Gomes
Comment 2
2012-09-13 10:14:17 PDT
Created
attachment 163899
[details]
follow up
WebKit Review Bot
Comment 3
2012-09-13 10:18:46 PDT
Comment on
attachment 163899
[details]
follow up Rejecting
attachment 163899
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: t/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue Parsed 2 diffs from patch file(s). patching file Source/WebKit/blackberry/Api/InRegionScroller.cpp patching file Source/WebKit/blackberry/ChangeLog Hunk #1 FAILED at 1. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebKit/blackberry/ChangeLog.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output:
http://queues.webkit.org/results/13847234
Antonio Gomes
Comment 4
2012-09-13 10:47:02 PDT
Created
attachment 163905
[details]
follow up
WebKit Review Bot
Comment 5
2012-09-13 11:16:42 PDT
Comment on
attachment 163905
[details]
follow up Clearing flags on attachment: 163905 Committed
r128484
: <
http://trac.webkit.org/changeset/128484
>
WebKit Review Bot
Comment 6
2012-09-13 11:16:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug