[BlackBerry] ASSERT failure in InRegionScrollableArea::InRegionScrollableArea https://bugs.webkit.org/show_bug.cgi?id=96645 PR #207307

Reviewed by George Staikos.
Patch by Antonio Gomes <agomes@rim.com>

We use canScrollRenderBox to promote the layer as scrollable instead
of RenderBox::canScrollAndHasScrollableArea (see comment above the former).
We should assert against the former as well.

* Api/InRegionScroller.cpp:
(BlackBerry::WebKit::InRegionScrollerPrivate::canScrollRenderBox):
* Api/InRegionScroller_p.h:
(WebCore):
(InRegionScrollerPrivate):
* WebKitSupport/InRegionScrollableArea.cpp:
(BlackBerry::WebKit::InRegionScrollableArea::InRegionScrollableArea):

Canonical link: https://commits.webkit.org/114542@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128456 268f45cc-cd09-0410-ab3c-d52691b4dbfc